# openconquest-stellar-frontiers

./: .env.example  .gitignore  AI_TASKS.md  LICENSE  README.md  TEST_REPORT.md  docker-compose.yml
.github/workflows/: backend-ci.yml
apps/api/: pyproject.toml  test.db
apps/api/app/: config.py  database.py  main.py
apps/api/app/game_engine/: __init__.py  combat.py  map.py  objectives.py  reducer.py  state.py  validators.py
apps/api/app/models/: match.py  room.py
apps/api/app/routers/: health.py  rooms.py
apps/api/app/schemas/: room.py
apps/api/app/services/: match_service.py  room_service.py
apps/api/app/websocket/: manager.py  routes.py
apps/api/openconquest_stellar_frontiers_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_attack.py  test_combat.py  test_reinforcement_and_movement.py  test_rooms.py  test_turns_and_objectives.py  test_websocket.py
apps/web/: README.md  package-lock.json  package.json  playwright.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: ActionModal.css  ActionModal.tsx  Button.css  Button.tsx  Card.css  Card.tsx  GalaxyMap.css  GalaxyMap.tsx  Input.css  Input.tsx
apps/web/src/pages/: GalaxyMapPlaceholder.tsx  Lobby.css  Lobby.tsx  MatchBoard.tsx
apps/web/src/services/: api.ts  ws.ts
apps/web/src/store/: useGameStore.ts
apps/web/test-results/: .last-run.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  GAME_DESIGN.md  LEGAL.md  NEXT_TASKS.md  PRODUCT_DIRECTION.md  ROADMAP.md  RULES.md  SECURITY.md  WEBSOCKET_PROTOCOL.md
(+2 files in other folders)
